fix: align close button to the right

--- a/src/scss/components/todos/_item.scss
+++ b/src/scss/components/todos/_item.scss
@@ -21,6 +21,7 @@
 				}
 
 				> button.icon {
+					margin-left: auto;
 					border-radius: 0;
 					font-size: bs.$default-font-size;
 				}
